# Bank-Account-System

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
src/: Main.cpp  account.cpp  change_pin.cpp  check_existing_account.cpp  create_account.cpp  db_manager.cpp  display.cpp  login_screen.cpp  login_screen.txt  main.cpp  save_account.cpp
src/User_Data/Alex/: Account_Information.txt
src/includes/: account.h  account.hpp  all_headers.h  change_pin.h  check_existing_account.h  check_existing_account.hpp  config.hpp  create_account.h  create_account.hpp  db_manager.hpp  display.h  display.hpp  example-config.hpp  login_screen.h  login_screen.hpp  save_account.h
src/user_data/1/: Account_Information.txt
src/user_data/2/: Account_Information.txt
src/user_data/Alex/: Account_Information.txt
src/user_data/Bryan/: Account_Information.txt
src/user_data/Charelly/: Account_Information.txt
src/user_data/Niki/: Account_Information.txt
